--- a/layout/index.html
+++ b/layout/index.html
@@ -237,6 +237,19 @@
                     <p>코드 보기 <a href="layout25.html">View</a></p>
                 </div>
                 <!-- //Intro25 -->
+                <!-- Intro28 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro25" class="page-header">레이아웃28</h2>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <a href="#" class="thumbnail">
+                                <img src="img/layout25.png" alt="레이아웃">
+                            </a>
+                        </div>
+                    </div>
+                    <p>코드 보기 <a href="layout28.html">View</a></p>
+                </div>
+                <!-- //Intro28 -->
             </div>
             <!-- //col-md-9 -->
             <!-- //col-md-3 -->
