--- a/responsive/assets/css/style.css
+++ b/responsive/assets/css/style.css
@@ -1,29 +1,33 @@
 /* 레이아웃 */
-body{
+body {
     background: url(../img/header_bg.jpg) repeat-x center top;
 }
-#header {   
 
-}
-#nav{
+#header {}
+
+#nav {
     background-color: #f6fdff;
 }
-#title{
+
+#title {
     background-color: #eaf7fd;
 }
-#contents{
-    
+
+#contents {
     overflow: hidden;
 }
-#contents .container{
+
+#content .container {
     border-right: 1px solid #dbdbdb;
     border-left: 1px solid #dbdbdb;
 }
-#cont_left{
+
+#cont_left {
     float: left;
     width: 250px;
 }
-#cont_center{
+
+#cont_center {
     overflow: hidden;
     min-height: 1300px;
     margin-right: 250px;
@@ -31,13 +35,15 @@ body{
     border-left: 1px solid #dbdbdb;
     box-sizing: border-box;
 }
-#cont_rigth{
+
+#cont_rigth {
     position: absolute;
     right: 0;
     top: 0;
     width: 250px;
 }
-#footer{
+
+#footer {
     border-top: 1px solid #dbdbdb;
 }
 
@@ -85,12 +91,13 @@ body{
     font-weight: bold;
     text-transform: uppercase;
     margin-top: 55px;
-    transition: box-shadow 0.25s ease-in-out ;
+    transition: box-shadow 0.25s ease-in-out;
 }
-.header .header_tit h1:hover{
-    box-shadow: 
-    inset -300px 0 0 #257fac,
-    inset 300px 0 0 #257fac;
+
+.header .header_tit h1:hover {
+    box-shadow:
+        inset -300px 0 0 #257fac,
+        inset 300px 0 0 #257fac;
 }
 
 .header .header_tit a {
@@ -101,22 +108,25 @@ body{
     padding: 10px 20px;
     margin-top: -7px;
 }
-.header .header_tit a:hover{
+
+.header .header_tit a:hover {
     box-shadow:
-    0 0 0 5px rgba(75,154,191,0.9) inset,
-    0 0 0 100px rgba(0,0,0,0.1) inset;
+        0 0 0 5px rgba(75, 154, 191, 0.9) inset,
+        0 0 0 100px rgba(0, 0, 0, 0.1) inset;
 }
 
 .header .header_icon {
     text-align: center;
     margin-top: 40px;
 }
-.header .header_icon li{
+
+.header .header_icon li {
     display: inline;
     margin: 0 2px;
-    
+
 }
-.header .header_icon li a{
+
+.header .header_icon li a {
     width: 60px;
     height: 60px;
     display: inline-block;
@@ -128,25 +138,29 @@ body{
     position: relative;
     transition: box-shadow 0.25s ease-in-out;
 }
-.header .header_icon li a:hover{
-    box-shadow: 
-    0 0 0 3px rgba(75,154,191,0.9) inset,
-    0 0 0 100px rgba(0,0,0,0.1) inset;
+
+.header .header_icon li a:hover {
+    box-shadow:
+        0 0 0 3px rgba(75, 154, 191, 0.9) inset,
+        0 0 0 100px rgba(0, 0, 0, 0.1) inset;
 }
-.header .header_icon li a span{
+
+.header .header_icon li a span {
     position: absolute;
     left: 50%;
-    transform: translateX(-50%); /*위치 가운데로 옮기기*/
+    transform: translateX(-50%);
+    /*위치 가운데로 옮기기*/
     top: -40px;
     font-size: 12px;
     background: #3192bf;
-    border-radius : 6px 0;
+    border-radius: 6px 0;
     line-height: 1.6;
-    padding: 3px 6px; 
+    padding: 3px 6px;
     opacity: 0;
-    transition: all 0.3s ease;   
+    transition: all 0.3s ease;
 }
-.header .header_icon li a span::before{
+
+.header .header_icon li a span::before {
     content: '';
     position: absolute;
     left: 50%;
@@ -156,36 +170,42 @@ body{
     border-left: 5px solid transparent;
     border-right: 5px solid transparent;
 }
-.header .header_icon li a:hover span{
+
+.header .header_icon li a:hover span {
     top: -33px;
     opacity: 1;
-    
+
 }
 
 /* 전체 메뉴 */
-.nav{
+.nav {
     padding: 25px 0;
     overflow: hidden;
 }
-.nav > div{
+
+.nav>div {
     float: left;
     width: 40%;
 }
-.nav > div:last-child{
+
+.nav>div:last-child {
     width: 20%;
 }
-.nav > div ol{
+
+.nav>div ol {
     overflow: hidden;
     margin-bottom: 10px;
 }
-.nav > div li{
+
+.nav>div li {
     float: left;
     width: 50%;
     position: relative;
     padding-left: 8px;
     box-sizing: border-box;
 }
-.nav > div li::before{
+
+.nav>div li::before {
     content: '';
     width: 3px;
     height: 3px;
@@ -193,12 +213,14 @@ body{
     border-radius: 50%;
     position: absolute;
     left: 0;
-    top: 6px;    
+    top: 6px;
 }
-.nav > div li a{
+
+.nav>div li a {
     position: relative;
 }
-.nav > div li a::before{
+
+.nav>div li a::before {
     content: '';
     display: inline-block;
     width: 0;
@@ -209,14 +231,16 @@ body{
     left: 0;
     transition: all 0.3s;
 }
-.nav > div li:hover a::before{
+
+.nav>div li:hover a::before {
     width: 100%;
 }
 
-.nav > div:last-child li{
+.nav>div:last-child li {
     width: 100%;
 }
-.nav > div h3{
+
+.nav>div h3 {
     font-size: 18px;
     color: #25a2d0;
     font-weight: bold;
@@ -224,17 +248,19 @@ body{
 }
 
 /*타이틀*/
-.title{
+.title {
     text-align: center;
     position: relative;
 }
-.title h2{
+
+.title h2 {
     font-family: 'Nanum Brush Script';
     color: #25a2d0;
     font-size: 40px;
     padding: 5px 0;
 }
-.title .btn{
+
+.title .btn {
     position: absolute;
     width: 60px;
     height: 60px;
@@ -247,106 +273,114 @@ body{
     font-size: 35px;
     line-height: 60px;
 }
-.title .btn:hover{
-    box-shadow: 
-    0 0 0 3px rgba(75,154,191,0.9) inset,
-    0 0 0 100px rgba(0,0,0,0.1) inset;
+
+.title .btn:hover {
+    box-shadow:
+        0 0 0 3px rgba(75, 154, 191, 0.9) inset,
+        0 0 0 100px rgba(0, 0, 0, 0.1) inset;
 }
+
 /*컨텐츠 영역*/
 .column {
     padding: 15px;
     border-bottom: 1px solid #dbdbdb;
 }
-.column .col_tit{
+
+.column .col_tit {
     font-size: 20px;
     color: #3f7fa6;
     border-bottom: 5px;
 }
-.column .col_desc{
+
+.column .col_desc {
     border-bottom: 1px solid #dbdbdb;
     padding-bottom: 15px;
     margin-bottom: 15px;
     color: #878787;
 }
-.column.col1{}
-.column.col2{}
-.column.col3{
+
+.column.col1 {}
+
+.column.col2 {}
+
+.column.col3 {
     border-bottom: 0;
     position: relative;
 }
-.column.col3 a{
-    float: left;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-}
-.column.col3 a.more{
-    position: absolute;
-    right: 50px;
-}
-.column.col3 li{
-    overflow: hidden;
-    background: url(../img/)no-repeat 0 8px;
-    padding-left: 8px;
-}
-.column.col4{}
-.column.col5{}
-.column.col6{
+
+.column.col4 {}
+
+.column.col5 {}
+
+.column.col6 {
     border-bottom: 0;
 }
-.column.col7{}
-.column.col8{}
-.column.col9{
+
+.column.col7 {}
+
+.column.col8 {}
+
+.column.col9 {
     border-bottom: 0;
 }
+
 /*메뉴*/
-.menu{}
-.menu li{
+.menu {}
+
+.menu li {
     position: relative;
 }
-.menu li a{
+
+.menu li a {
     font-size: 16px;
     text-transform: uppercase;
     color: #878787;
     padding: 10px;
     display: block;
     border-bottom: 1px solid #dbdbdb;
-    transition: box-shadow 0.34s ease, background 0.34s ease ;
+    transition: box-shadow 0.34s ease, background 0.34s ease;
 }
-.menu li a:hover{
-    box-shadow: inset 180px 0 0 0 rgba(36,130,174,0.7) ;
+
+.menu li a:hover {
+    box-shadow: inset 180px 0 0 0 rgba(36, 130, 174, 0.7);
     color: #fff;
-    background: rgba(36,130,174,0.9);
+    background: rgba(36, 130, 174, 0.9);
 }
-.menu li a i{
+
+.menu li a i {
     position: absolute;
     right: 10px;
     top: 15px;
 }
+
 /*게시판*/
-.notice1{
+.notice1 {
     position: relative;
-  }
-  .notice1 h5{
+}
+
+.notice1 h5 {
     font-size: 14px;
     color: #449ce2;
     padding-bottom: 5px;
-  }
-  .notice1 .more{
+}
+
+.notice1 .more {
     position: absolute;
     right: 0;
     top: 3px;
     font-size: 10px;
     text-transform: uppercase;
-  }
-  .notice1 li{  
+}
+
+.notice1 li {
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
     position: relative;
     padding-left: 8px;
-  }
-  .notice1 li::before{
+}
+
+.notice1 li::before {
     content: '';
     width: 3px;
     height: 3px;
@@ -354,209 +388,283 @@ body{
     position: absolute;
     left: 0;
     top: 6px;
-    
-  }
-  .notice2{
+
+}
+
+.notice2 {
     position: relative;
-  }
-  .notice2 h5{
+}
+
+.notice2 h5 {
     font-size: 14px;
     color: #449ce2;
     padding-bottom: 5px;
-  }
-  .notice2 .more{
+}
+
+.notice2 .more {
     position: absolute;
     right: 0;
     top: 3px;
     font-size: 10px;
     text-transform: uppercase;
-  }
-  .notice2 li{  
-    overflow: hidden;    
+}
+
+.notice2 li {
+    overflow: hidden;
     text-overflow: ellipsis;
-    display: -webkit-box ;
+    display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 2;
     position: relative;
     padding-left: 8px;
-    max-height: 40px; /*ie*/
-  }
-  .notice2 li::before{
+    max-height: 40px;
+    /*ie*/
+}
+
+.notice2 li::before {
     content: '';
     width: 3px;
     height: 3px;
     border-radius: 50%;
     position: absolute;
     left: 0;
-    top: 6px;    
-  }
-  .blog2{
-      margin-top: 10px;
-  }
-  /*라이트 박스*/
-  .lightbox{
-      overflow: hidden;
-  }
-  .lightbox > div{
-      float: left;
-      width: 19%;
-      margin: 0.5%;
-  }
-  /*video*/
-  .video{
-      position: relative;
-      width: 100%;
-      padding-bottom: 56.25%;
-  }
-  .video iframe{
-      position: absolute;
-      width: 100%;
-      height: 100%;
-  }
-  .footer{
-      padding: 30px 0;
-      text-align: center;
-      
-  }
- .footer ul li{
-     display: inline;
-     position: relative;
- }
- .footer li::before{
-     content: '';
-     width: 1px;
-     height: 12px;
-     position: absolute;
-     background: rgb(197, 195, 195);
-     top: 1px;
- }
- .footer li:first-child:before{
-     width: 0;
- }
- .footer ul li a{
-     margin: 20px;
- }
- address{
-     padding: 20px;
- }
+    top: 6px;
+}
+
+.blog2 {
+    margin-top: 10px;
+}
+
+/*라이트 박스*/
+.lightbox {
+    overflow: hidden;
+}
+
+.lightbox>div {
+    float: left;
+    width: 19%;
+    margin: 0.5%;
+}
+
+/*video*/
+.video {
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%;
+}
+
+.video iframe {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.footer {
+    padding: 30px 0;
+    text-align: center;
+}
+
+.footer ul li {
+    display: inline;
+    position: relative;
+}
+
+.footer li::before {
+    content: '';
+    width: 1px;
+    height: 12px;
+    position: absolute;
+    background: rgb(197, 195, 195);
+    top: 1px;
+}
+
+.footer li:first-child:before {
+    width: 0;
+}
+
+.footer ul li a {
+    margin: 20px;
+}
+
+address {
+    padding: 20px;
+}
+
 /* 미디어 쿼리 */
 @media (max-width: 1220px) {
     .container {
         width: 100%;
     }
-    .row{
+
+    .row {
         padding: 0 15px;
     }
-    #contents .container{
-     border: 0;   
+
+    #contents .container {
+        border: 0;
     }
-    .lightbox > div{
+
+    .lightbox>div {
         width: 24%;
     }
-    .lightbox  > div:nth-child(5n){
+
+    .lightbox>div:nth-child(5n) {
         display: none;
     }
 }
-@media (max-width: 1024px){
-    .lightbox > div{
+
+@media (max-width: 1024px) {
+    .lightbox>div {
         width: 32%;
     }
-    .lightbox  > div:last-child{
+
+    .lightbox>div:last-child {
         display: block;
-    }   
+    }
 }
-@media (max-width: 960px){
-    .nav > div{
+
+@media (max-width: 960px) {
+    .nav {
+        padding-left: 30px;
+    }
+
+    .nav>div {
         width: 100%;
-        }
-    .nav > div li{
+    }
+
+    .nav>div li {
         width: 33.3333%;
-        } 
-    .nav > div:last-child{
+    }
+
+    .nav>div:last-child {
         width: 100%;
     }
-    .nav > div:last-child li{
-        width: 100%;
+
+    .nav>div:last-child li {
+        width: 33.3333%;
     }
-    #cont_center{
+
+    #cont_center {
         margin-right: 0;
         border-right: 0;
     }
-    #cont_rigth{
+
+    #cont_rigth {
         position: static;
         width: 100%;
         border-top: 1px solid #dbdbdb;
-    }    
-    #cont_rigth .column{float: left;width: 33.3333%;box-sizing: border-box;}
-    #cont_rigth .column.col7{border-bottom: 0;border-right: 1px solid #dbdbdb;}
-    #cont_rigth .column.col8{border-bottom: 0;border-right: 1px solid #dbdbdb;}
+    }
+
+    #cont_rigth .column {
+        float: left;
+        width: 33.3333%;
+        box-sizing: border-box;
+    }
+
+    #cont_rigth .column.col7 {
+        border-bottom: 0;
+        border-right: 1px solid #dbdbdb;
+    }
+
+    #cont_rigth .column.col8 {
+        border-bottom: 0;
+        border-right: 1px solid #dbdbdb;
+    }
 }
-@media (max-width:768px){
-    #cont_left{
+
+@media (max-width:768px) {
+    #cont_left {
         width: 100%;
         float: none;
-    }    
+    }
 }
-@media (max-width:600px){
-    .header{
+
+@media (max-width:600px) {
+    .header {
         height: auto;
-    }       
-    .header_tit{
+    }
+
+    .header_tit {
         display: none;
     }
-    .header_icon{
+
+    .header_icon {
         display: none;
     }
-    .nav{
+
+    .nav {
         display: none;
     }
-    .title a.btn{
+
+    .title a.btn {
         display: none;
     }
-    .col1 .col_tit{
+
+    .col1 .col_tit {
         display: none;
     }
-    .col1 .col_desc{
+
+    .col1 .col_desc {
         display: none;
     }
-    .col1{
+
+    .col1 {
         padding: 0;
     }
-    .column.col2{
+
+    .column.col2 {
         background: #fff;
     }
-    .menu ul{
+
+    .menu ul {
         overflow: hidden;
     }
-    .menu li{
+
+    .menu li {
         float: left;
         width: 33.3333%;
         text-align: center;
         border-right: 1px solid #dbdbdb;
         box-sizing: border-box;
     }
-    .menu li:nth-child(3n){
+
+    .menu li:nth-child(3n) {
         border-right: 0;
     }
-    .menu li a{
+
+    .menu li a {
         color: #fff;
-        text-shadow:0 0 5px rgba(36,130,170,0.7);
+        text-shadow: 0 0 5px rgba(36, 130, 170, 0.7);
     }
-    .menu li a:hover{
+
+    .menu li a:hover {
         box-shadow: none;
-        background:rgba(36,130,170,0.3);
+        background: rgba(36, 130, 170, 0.3);
     }
-    .menu li a i{
+
+    .menu li a i {
         display: none;
     }
-    .lightbox > div{
+
+    .lightbox>div {
         width: 49%;
     }
-    .lightbox  > div:last-child{
+
+    .lightbox>div:last-child {
         display: none;
-    }  
-    #cont_rigth .column.col7{width: 50%;}
-    #cont_rigth .column.col8{width: 50%;border-right: none;}
-    #cont_rigth .column.col9{display: none;}
-    
+    }
+
+    #cont_rigth .column.col7 {
+        width: 50%;
+    }
+
+    #cont_rigth .column.col8 {
+        width: 50%;
+        border-right: none;
+    }
+
+    #cont_rigth .column.col9 {
+        display: none;
+    }
+
 }
